--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yellow Sass</title>
+    <link rel="stylesheet" href="./public/css/styles.css " />
+    <script
+      src="https://kit.fontawesome.com/be38aa65d1.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header id="header">
+        <div id="logo">
+
+        </div>
+        <nav>
+
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+
+        </section>
+
+        <section id="about">
+
+        </section>
+
+        <section id="projects">
+
+        </section>
+
+        <section id="testimonials">
+
+        </section>
+
+        <section id="services">
+
+        </section>
+
+        <section id="latest-news">
+
+        </section>
+
+        <div id="figure-transition">
+
+        </div>
+
+        <section id="contact-us">
+
+        </section>
+    </main>
+
+    <footer>
+        <article id="links">
+
+        </article>
+        <div id="lower-part">
+
+        </div>
+    </footer>
+  </body>
 </html>
