--- a/index.html
+++ b/index.html
@@ -12,55 +12,52 @@
   </head>
   <body>
     <header id="header">
-        <div id="logo">
-
-        </div>
-        <nav>
-
-        </nav>
+      <div>
+        <img src="./assets/images/logo-yellow.png" alt="logo-yellow" width="100%" height="auto">
+      </div>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Portfolio</li>
+          <li>Testimonials</li>
+          <li>Services</li>
+          <li>Blog</li>
+          <li>Our Team</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section id="home">
-
-        </section>
-
-        <section id="about">
-
-        </section>
-
-        <section id="projects">
-
-        </section>
-
-        <section id="testimonials">
-
-        </section>
-
-        <section id="services">
-
-        </section>
-
-        <section id="latest-news">
-
-        </section>
-
-        <div id="figure-transition">
-
+      <section id="home">
+        <div>
+          <h1>Clean<span>.</span>Slick<span>.</span>Pixel Perfect</h1>
+          <p>Ildy is a great one-page theme, perfect for developers and designers but also for someone who just wants a new website for his business. Try it now!</p>
+          <div>
+            <a href="#">Learn more</a>
+            <a href="#">Download</a>
+          </div>
         </div>
+      </section>
 
-        <section id="contact-us">
+      <section id="about"></section>
 
-        </section>
+      <section id="projects"></section>
+
+      <section id="testimonials"></section>
+
+      <section id="services"></section>
+
+      <section id="latest-news"></section>
+
+      <div id="figure-transition"></div>
+
+      <section id="contact-us"></section>
     </main>
 
     <footer>
-        <article id="links">
-
-        </article>
-        <div id="lower-part">
-
-        </div>
+      <article id="links"></article>
+      <div id="lower-part"></div>
     </footer>
   </body>
 </html>
