--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div>
               <!-- icon -->
             </div>
-            <h3>Web Design</h3>
+            <h3>Web Development</h3>
             <p>Consectetur adipiscing elit. Praesent molestie urna hendrerit erat tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue dapibus porttitor at in mauris. Pellentesque commodo...</p>
           
           </article>
@@ -97,7 +97,7 @@
             <div>
               <!-- icon -->
             </div>
-            <h3>Web Design</h3>
+            <h3>SEO Analisys</h3>
             <p>Consectetur adipiscing elit. Praesent molestie urna hendrerit erat tincidunt tempus. Aliquam a leo risus. Fusce a metus non augue dapibus porttitor at in mauris. Pellentesque commodo...</p>
           
           </article>
