--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <div>
           <img src="./assets/images/avatar.jpg" alt="avatar">
         </div>
+        <div class="msg-bubble">
+          "Awesome theme with great design and awesome support. If you don't know how to code your own WordPress theme, but you still want a good-looking website for your business, Illdy might be exactly what you need. It is a slick theme with a lot of features to choose from."
+        </div>
         <p>Mike Muller</p>
         <div>
           <div></div>
